src/css/site.css
/* ... */
.navbar-item.has-dropdown {
	padding: 0;
}
.navbar-item .icon {
	width: 1.25rem;
	height: 1.25rem;
	display: block;
}
.navbar-item .icon :is(img, svg) {
	fill: currentColor;
	width: inherit;
	height: inherit;
}
.navbar-link {
	transition: var(--default-transition);
	padding-right: 2.5em;
	cursor: pointer;
}
.navbar-dropdown .navbar-item {
	padding-left: 1.5rem;
	padding-right: 1.5rem;
}
.navbar-dropdown a.navbar-item {
	color: var(--default-text-color);
	text-decoration: none;
}
.navbar-dropdown a.navbar-item:hover {
	color: var(--link-hover-color);
}
.navbar-dropdown .navbar-item.has-label {
	display: flex;
	justify-content: space-between;
}
.navbar-dropdown .navbar-item small {
	color: var(--page-version-missing-text-color);
	font-size: 0.66667rem;
}
.navbar-divider {
	background-color: var(--header-h1-border-color);
	border: none;
	height: 1px;
	margin: 0.25rem 0;
}
.navbar .button {
	display: inline-flex;
	align-items: center;
	background: var(--default-bg-color);
	border: 1px solid var(--table-border-color);
	border-radius: 0.15rem;
	height: 1.75rem;
	color: var(--default-text-color);
	padding: 0 0.75em;
	white-space: nowrap;
}
.navbar .navbar-item.has-dropdown {
	order: 1;
}
.navbar-menu .navbar-item.search {
	order: -1;
}
.navbar-end {
	display: flex;
	flex-direction: column;
}
@media screen and (max-width: 768.5px) {
	.navbar-menu .search-result-dropdown-menu {
		top: calc(100% + 3em);
		width: 100%;
	}
	.navbar-menu #search-input {
		width: 100%;
	}
	.navbar-brand .navbar-item.search {
		padding-left: 0;
		padding-right: 0;
	}
}
@media screen and (min-width: 769px) {
	.navbar-menu .search-result-dropdown-menu {
		max-width: calc(100vw - 250px);
	}
	#search-input {
		width: 200px;
	}
}
@media screen and (max-width: 1023.5px) {
	.navbar-brand {
		height: inherit;
	}
	.navbar-brand .navbar-item {
		align-items: center;
		display: flex;
	}
	.navbar-item a.navbar-link {
		color: var(--default-text-color);
	}
	.navbar-item > a.navbar-link {
		text-decoration: none;
	}
	.navbar-item .navbar-dropdown a {
		text-decoration: underline;
		text-decoration-style: dotted;
	}
	.navbar-item .site-logo {
		padding-top: 0.3em;
	}
	.navbar-item .navbar-dropdown a:hover {
		text-decoration-style: solid;
	}
	.navbar-menu {
		background: var(--default-bg-color);
		box-shadow: 0 8px 16px rgba(40, 40, 40, 0.4);
		max-height: calc(100vh - var(--header-bar-height));
		overflow-y: auto;
		overscroll-behavior: none;
		padding: 0.5rem 0;
		border-bottom: 1px solid var(--table-border-color);
	}
	.navbar-menu:not(.is-active) {
		display: none;
	}
	.navbar-menu :is(.navbar-link:hover, a.navbar-item:hover) {
		background: var(--table-bg-color);
	}
}
@media screen and (min-width: 1024px) {
	.desktop-instructions {
		display: block;
	}
	.mobile-instructions {
		display: none;
	}
	.navbar-menu .search-result-dropdown-menu {
		width: 600px;
	}
	.navbar #search-field {
		margin-right: unset;
	}
	.navbar-burger {
		display: none;
	}
	.navbar-menu .navbar-item.search {
		order: 9999;
	}
	.navbar,
	.navbar-item,
	.navbar-link,
	.navbar-menu {
		display: flex;
	}
	.navbar-end {
		flex-direction: row;
	}
	.navbar-item,
	.navbar-link {
		position: relative;
		flex: none;
	}
	.navbar-item:not(.has-dropdown),
	.navbar-link {
		align-items: center;
	}
	.navbar-item.is-hoverable:hover .navbar-dropdown {
		display: block;
	}
	.navbar-link::after {
		border-width: 0 0 1px 1px;
		border-style: solid;
		content: "";
		display: block;
		height: 0.5em;
		pointer-events: none;
		position: absolute;
		transform: rotate(-45deg);
		width: 0.5em;
		margin-top: -0.5em;
		right: 1.125em;
		top: 50%;
	}
	.navbar-end .navbar-link,
	.navbar-end > .navbar-item {
		color: #fff;
	}
	.navbar-end .navbar-item.has-dropdown:hover .navbar-link,
	.navbar-end .navbar-link:hover,
	.navbar-end > a.navbar-item:not(.navbar-external-link):hover {
		background: #fff;
		color: #111;
		border-bottom: 1px solid var(--table-border-color);
	}
	.navbar-end .navbar-link::after {
		border-color: currentColor;
	}
	.navbar-dropdown {
		background: var(--default-bg-color);
		border: 1px solid var(--table-border-color);
		border-top: none;
		border-radius: 0 0 0.25rem 0.25rem;
		display: none;
		top: 100%;
		left: -1px;
		min-width: calc(100% + 2px);
		position: absolute;
	}
	.has-dropdown.open-left .navbar-dropdown {
		left: unset;
		right: -1px;
	}
	.navbar-dropdown .navbar-item {
		padding: 0.5rem 1.2rem 0.5rem 1.2rem;
		border-radius: 0;
		white-space: nowrap;
	}
	.navbar-dropdown .navbar-item {
		color: var(--default-text-color);
		text-decoration: none;
	}
	.navbar-dropdown .navbar-item small {
		position: relative;
		right: -2rem;
	}
	.navbar-dropdown.is-right {
		left: auto;
		right: 0;
	}
}
footer.footer {
	background-color: var(--footer-bg-color);
	color: var(--footer-text-color);
	font-size: 0.83333rem;
	line-height: 1.6;
	padding: 1.5rem;
}
.footer p {
	margin: 0.5rem 0;
}
.footer a {
	color: var(--toolbar-text-color);
}

@page {
	margin: 0.5in;
}
/* ... */

